プロファイル実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+  <% if user_signed_in? %> 
+<header>
+  <div><%= link_to "トップ", "profiles/show", class: "text-white" %></div>
+  <div><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-white" %></div> 
+</header>
+<% end %> 
     <%= yield %>
   </body>
 </html>
