--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -23,4 +23,6 @@
     <div >
         <%= f.submit "更新", class: "button" %>
     </div>
+    <%= link_to "編集",user_path(@profile.id) %>
 <% end %>
+
