--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Rooms#index</h1>
-<p>Find me in app/views/rooms/index.html.erb</p>
+<table>
+    <tr>
+        <th>ルーム画像</th>
+        <th>ルーム名</th>
+        <th>ルーム紹介</th>
+        <th>料金</th>
+        <th>作成日</th>
+    </tr>
+    <% @rooms.each do |room|%>
+    <tr>
+        <td><%= image_tag room.image.url %></td>
+        <td><%= link_to room.room_name,room_path(room.id) %></td>
+        <td><%= room.room_description %></td>
+        <td><%= room.price %></td>
+        <td><%= room.created_at.to_s(:datetime_jp) %></td>
+    </tr>
+    <% end %>
+</table>
+
