--- a/app/views/users/account.html.erb
+++ b/app/views/users/account.html.erb
@@ -7,6 +7,9 @@
     <tr>
         <th>パスワード</th>
         <td><%= @user.encrypted_password %></td>
-    <tr>
-    <%= link_to "編集",edit_user_registration_path(@user.id) %>
+    </tr>
+    <ul>
+        <li><%= link_to "編集",edit_user_registration_path(@user.id) %></li>
+        <li><%= link_to "ルーム登録",new_room_path %></li>
+    </ul>
 </table>
