--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,12 +1,37 @@
+<div><%= image_tag @room.image.url %></div>
+<div>
+    <% if @profile.avatar %>
+        <%= image_tag @profile.avatar.url %>
+    <% end %>
+</div>
+<div>
+    <%= @room.room_name %><br>
+    <%= @room.address %>
+</div>
+<div><%= @room.room_description %></div>
 
-        <div><%= image_tag @room.image.url %></div>
-        <div>
-            <% if @profile.avatar %>
-                <%= image_tag @profile.avatar.url %>
-            <% end %>
-        </div>
-        <div>
-            <%= @room.room_name %><br>
-            <%= @room.address %>
-        </div>
-        <div><%= @room.room_description %></div>
+<div>
+    <%= form_with model:@reservation,method: :post, url: reservations_confirm_path do |f| %>
+    <%= f.hidden_field :room_id, value: @room.id %>
+        <table>
+            <tr>
+                <td><%= @room.price %> / 日</td>
+            </tr>
+            <tr>
+                <th><%= f.label :start_date,"開始日" %></th>
+                <td><%= f.date_field :start_date %></td>
+            <tr>
+                <th><%= f.label :end_date,"終了日" %></th>
+                <td><%= f.date_field :end_date %></td>
+            </tr>
+            <tr>
+                <th><%= f.label :count,"人数" %></th>
+                <td><%= f.number_field :count %></td>
+            </tr>
+            <tr>
+                <td><%= f.submit "予約する" %></td>
+            </tr>
+    <% end %>
+</div>
+
+       
