確認画面以外実装

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+ *{box-sizing: border-box;}
+header{
+    background-color: black;
+    display:flex;
+    justify-content: space-between;
+}
+.menu{
+    display: flex;
+}
+.user_name{
+    color: white;
+    margin-top: 25px;
+    margin-right:10px;
+}
+.dropdown-toggle{
+    margin-top: 15px;
+    height:35px;
+}
