--- a/app/views/rooms/register.html.erb
+++ b/app/views/rooms/register.html.erb
@@ -1,5 +1,8 @@
+<div class="room-title">
+    <h4>登録済みルーム一覧</h4>
+</div>
 <table>
-    <tr>
+    <tr class="tr" align="center">
         <th>ルーム画像</th>
         <th>ルーム名</th>
         <th>ルーム紹介</th>
@@ -7,8 +10,8 @@
         <th>作成日</th>
     </tr>
     <% @rooms.each do |room|%>
-    <tr>
-        <td><%= image_tag room.image.url %></td>
+    <tr class="tr">
+        <td><%= image_tag room.image.url, class: "reservation-image" %></td>
         <td><%= link_to room.room_name,room_path(room.id) %></td>
         <td><%= room.room_description %></td>
         <td><%= room.price %></td>
