--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,3 +1,47 @@
 // Place all the styles related to the Profiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.rows{
+    display:flex;
+    padding: 20px 10px;
+    border-bottom: 2px solid #e2e2e2;
+}
+
+.room-view{
+    border-left: 2px solid gray;
+    background-color: #F6F8F9;
+    
+}
+.user-view-box{
+    border: 2px solid #e2e2e2;
+    margin:20px;
+    background-color: white;
+}
+.pro-title{
+    padding:20px;
+    border-bottom: 2px solid #e2e2e2;
+}
+
+.icon-box{
+    text-align: center;
+}
+
+.avatar-image{
+    width: 80px;
+    height:80px;
+    
+}
+.buttons{
+    margin: 20px;
+    width: 200px;
+    height:40px;
+    border: 1px solid blue;
+    background-color: blue;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.title{
+    padding: 10px;
+}
+
