--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,24 +5,32 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
 <header>
-<% if user_signed_in? %> 
-  <div><%= link_to "トップ",rooms_path,class: "text-white" %></div>
-   <div><%= link_to "ルーム登録",new_room_path %></div>
-  <div><%= link_to "予約済みルーム一覧",reservations_path %></div>
-  <div><%= link_to "登録済みルーム一覧",rooms_register_path %></div>
-  <div><%= link_to "設定",users_account_path %></div>
-  <div><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-white" %></div>
-<% else %>
-  <div><%= link_to "ログイン",user_session_path %></div>
-  <div><%= link_to "新規登録", new_user_registration_path %></div>
-<% end %>
+  <div><%= link_to image_tag("https://presite-potepancamp-rails-02.herokuapp.com/assets/logo.png", class:"image_switch"), rooms_top_path %></div>
+  <div class="menu">
+    <% if user_signed_in? %> 
+      <div class="user_name"><%= current_user.name %></div>
+      <div class="d-flex">
+        <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
+          メニュー
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
+          <li><%= link_to "トップ",rooms_top_path, class: "dropdown-item" %></li>
+          <li><%= link_to "ルーム登録",new_room_path, class: "dropdown-item" %></li>
+          <li><%= link_to "予約済みルーム一覧",reservations_path, class: "dropdown-item" %></li>
+          <li><%= link_to "登録済みルーム一覧",rooms_register_path, class: "dropdown-item" %></li>
+          <li><%= link_to "設定",users_account_path, class: "dropdown-item" %></li>
+          <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
+        </ul>
+      </div>
+    <% end %> 
+  <div>
 </header>
  
     <%= yield %>
