--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,30 +1,12 @@
-<div class="search-form">
-    <%= form_with url: search_path, method: :get, local: true do |f| %>
-        <%= f.text_field :keyword, value: @keyword %>
-        <%= f.submit "検索" %>
-    <% end %>
-</div>
-<div class= "post-list" >
-    <% @rooms.each do |f| %>
-        <%= f.room_name %>
-    <% end %>
-</div>
-<table>
-    <tr>
-        <th>ルーム画像</th>
-        <th>ルーム名</th>
-        <th>ルーム紹介</th>
-        <th>料金</th>
-        <th>作成日</th>
-    </tr>
+<div class= "room-index">
     <% @rooms.each do |room|%>
-    <tr>
-        <td><%= image_tag room.image.url %></td>
-        <td><%= link_to room.room_name,room_path(room.id) %></td>
-        <td><%= room.room_description %></td>
-        <td><%= room.price %></td>
-        <td><%= room.created_at.to_s(:datetime_jp) %></td>
-    </tr>
+        <div class="card" style="width: 20rem;">
+        <%= image_tag room.image.url,class: "room-image" %>
+        <div class="card-body">
+        <h4 class="card-title"><%= room.room_name %></h4>
+        <p class="card-text"><%= room.address %></p>
+        <p class="card-text room-price">¥<%= room.price %></p>
+        </div>
+        </div>
     <% end %>
-</table>
-
+</div>
