--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,33 +1,39 @@
 <% if flash[:notice] %>
     <%= flash[:notice] %>
 <% end %>
-
-
-<%= form_with model: @room do |f| %>
-    <table>
-        <tr>
-            <th><%= f.label :room_name,"ルーム名" %></th>
-            <td><%= f.text_field :room_name %></td>
-        </tr>
-        <tr>
-            <th><%= f.label :room_description,"ルーム紹介"%></th>
-            <td><%= f.text_area :room_description %></td>
-        </tr>
-        <tr>
-            <th><%= f.label :price,"料金" %></th>
-            <td><%= f.number_field :price %></td>
-        </tr>
-        <tr>
-            <th><%= f.label :address,"住所" %></th>
-            <td><%= f.text_field :address %></td>
-        </tr>
-        <tr>
-            <th><%= f.label :image,"ルーム画像" %></th>
-            <td><%= f.file_field :image %></td>
-        </tr>
-        <tr><%= f.submit "登録する" %></tr>
-    </table>
-<% end %>
+<div class="row">
+    <div class="col-lg-2 row">
+        <%= link_to "基本情報",new_room_path %>
+    </div>
+    <div class = "col-lg-10 room-view">
+        <div>ルーム情報登録</div>
+        <%= form_with model: @room do |f| %>
+            <div>
+                <div class="row">
+                    <%= f.label :room_name,"ルーム名",class: "col-md-3"%>
+                    <%= f.text_field :room_name,class: "col-md-9" %>
+                </div>
+                <div class="row">
+                    <%= f.label :room_description,"ルーム紹介",class: "col-md-3"%>
+                    <%= f.text_area :room_description,class: "col-md-9" %>
+                </div>
+                <div class="row">
+                    <%= f.label :price,"料金",class: "col-md-3" %>
+                    <%= f.number_field :price,class: "col-md-9" %>
+                </div>
+                <div class="row">
+                    <%= f.label :address,"住所",class: "col-md-3" %>
+                    <%= f.text_field :address,class: "col-md-9" %>
+                </div>
+                <div class="row">
+                    <%= f.label :image,"ルーム画像",class: "col-md-3" %>
+                    <%= f.file_field :image,class: "col-md-9" %>
+                <div>
+                <div><%= f.submit "登録する" %></div>
+            </div>
+        <% end %>
+    </div>
+</div>
 
 
 
