--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,4 +1,7 @@
 <div class= "room-index">
+    <% if flash[notice] %>
+        <%= flash[:notice] %>
+    <% end %>
     <% @rooms.each do |room|%>
         <div class="card" style="width: 20rem;">
         <%= image_tag room.image.url,class: "room-image" %>
@@ -7,6 +10,7 @@
         <p class="card-text"><%= room.address %></p>
         <p class="card-text room-price">¥<%= room.price %></p>
         </div>
+        <%= link_to "詳細",room_path(room.id) %>
         </div>
     <% end %>
 </div>
