--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,6 +1,39 @@
 // Place all the styles related to the rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.main{
+    display: flex;
+}
+.intro{
+    margin-top: 20px;
+}
+.room-show-detile{
+    display:flex;
+    align-items:center;
+}
+.room-show-profile{
+    padding:30px;
+}
+.room-show-profile-icon{
+    padding:10px;
+}
+.room-show-detile-content{
+    font-size: 16px;
+    line-height: 30px;
+    padding: 30px 10px;
+    border-top:1px solid #eaedef;
+    border-bottom:1px solid #eaedef;
+}
+.room-show-nav{
+    margin:20px;
+    padding: 20px;
+    border: 1px solid #e2e2e2;
+}
+.rows{
+    display:flex;
+    padding: 20px 10px;
+    border-bottom: 2px solid #e2e2e2;
+}
 .top-main{
     background-image: url("https://presite-potepancamp-rails-02.herokuapp.com/assets/img_cover_top.jpg");
     background-size: cover;
