--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -16,7 +16,7 @@
             <%=form_with model: @profile do |f| %>
             <% if @profile.avatar? %>
                 <div class="icon-box">
-                    <%= image_tag @profile.avatar.url, class: "avatar-image" %>
+                    <%= image_tag @profile.avatar.url, class: "avatar-image title" %>
                 </div>
             <% end %>
             <div class= "rows">
