--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,37 +1,52 @@
-<div><%= image_tag @room.image.url %></div>
-<div>
-    <% if @profile.avatar %>
-        <%= image_tag @profile.avatar.url %>
-    <% end %>
+<% if flash[:notice] %>
+    <%= flash[:notice] %>
+<% end %>
+<div class="main">    
+    <div class="intro col-md-8">
+        <div><%= image_tag @room.image.url %></div>
+        <div class="room-show-detile">
+            <div class="room-show-detile-icon">
+                <% if @profile.avatar %>
+                    <%= image_tag @profile.avatar.url, class: "avatar-image" %>
+                <% end %>
+            </div>
+            <div class="room-show-profile">
+                <%= @room.room_name %><br>
+                <%= @room.address %>
+            </div>
+        </div>
+        <div class="room-show-detile-content">
+            <%= @room.room_description %>
+        </div>
+        
+    </div>
+    <div class="col-md-4 ">
+        <div class="room-show-nav">
+            <%= form_with model:@reservation,method: :post,url: reservations_confirm_path,local:true do |f| %>
+                <%= render 'layouts/error_messages', model: f.object %>
+                <%= f.hidden_field :room_id, value: @room.id %>
+                <%= f.hidden_field :profile_id, value: @room.profile_id %>
+            <%= f.hidden_field :user_id, value: current_user.id %>
+                <table>
+                    <tr class="rows">
+                        <td><%= @room.price %> / 日</td>
+                    </tr>
+                    <tr class="rows">
+                        <th><%= f.label :start_date,"開始日" %></th>
+                        <td><%= f.date_field :start_date %></td>
+                    <tr class="rows">
+                        <th><%= f.label :end_date,"終了日" %></th>
+                        <td><%= f.date_field :end_date %></td>
+                    </tr>
+                    <tr class="rows">
+                        <th><%= f.label :count,"人数" %></th>
+                        <td><%= f.number_field :count %></td>
+                    </tr>
+                    <tr class="rows">
+                        <td><%= f.submit "予約する" %></td>
+                    </tr>
+            <% end %>
+        </div>
+    </div>
 </div>
-<div>
-    <%= @room.room_name %><br>
-    <%= @room.address %>
-</div>
-<div><%= @room.room_description %></div>
-
-<div>
-    <%= form_with model:@reservation do |f| %>
-    <%= f.hidden_field :room_id, value: @room.id %>
-        <table>
-            <tr>
-                <td><%= @room.price %> / 日</td>
-            </tr>
-            <tr>
-                <th><%= f.label :start_date,"開始日" %></th>
-                <td><%= f.date_field :start_date %></td>
-            <tr>
-                <th><%= f.label :end_date,"終了日" %></th>
-                <td><%= f.date_field :end_date %></td>
-            </tr>
-            <tr>
-                <th><%= f.label :count,"人数" %></th>
-                <td><%= f.number_field :count %></td>
-            </tr>
-            <tr>
-                <td><%= f.submit "予約する" %></td>
-            </tr>
-    <% end %>
-</div>
-
        
